# LegalRagAgent

./: README.md  download_data.py  eval_baseline.py  eval_baseline_deepseek-reasoner.txt  eval_baseline_or-gemma27b.txt  eval_qa.py  eval_qa_deepseek-reasoner.txt  eval_qa_default.txt  eval_qa_gemma.txt  eval_qa_or-gemma27b.txt  eval_trace.py  latest_run.txt  llm_config.py  main.py  pyproject.toml  rag_utils.py  test_balance.py
