[project]
name = "legal-rag-agent"
version = "0.1.0"
description = "Agentic Legal RAG system built on LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.60.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.0.0",
    "datasets>=4.5.0",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
